# Ai-resell-agent

./: .env.example  .eslintrc.json  ANALYTICS_READY.md  AUDIT_REPORT.md  AUTOMATION_COMPLETE.md  CHANGES_SUMMARY.txt  DEPLOYMENT.md  Dockerfile  README.md  docker-compose.dev.yml  docker-compose.yml  eslint.config.mjs  middleware.ts  next.config.js  package-lock.json  package.json  proxy.ts  tailwind.config.js  tailwind.config.ts  tsconfig.json
app/: globals.css  layout.tsx  page.tsx
browser-extension/: BROWSER_AUTOMATION_2026.md  CHROME_STORE_SUBMISSION.md  README.md  background.js  manifest.json  offscreen.html  offscreen.js  popup.html  popup.js  session-capture.js
components/: OfflineBanner.tsx
docs/: AI_ASSISTANT.md  AI_INTEGRATION.md  ANALYTICS.md  ANALYTICS_IMPLEMENTATION_COMPLETE.md  ANALYTICS_SUMMARY.md  APP_OVERVIEW.md  ARCHITECTURE.md  AUDIT_REPORT.md  AUTH_SETUP_GUIDE.md  AUTOMATION_GUIDE.md  AUTOMATION_QUICKSTART.md  AUTOMATION_STATUS.md  AUTONOMOUS_WORKER_GUIDE.md  BUG_FIXES_DATABASE.md  BUILD_SUMMARY.md  BULK_LISTING.md  COMPLETE_SUMMARY.md  DATABASE_DETAILED_GUIDE.md  DATABASE_MIGRATION_COMPLETE.md  DELETE_ACCOUNT.md  DELETE_ACCOUNT_IMPLEMENTATION.md  DELETE_ACCOUNT_VISUAL_GUIDE.md  DEPLOYMENT.md  FEATURES.md  HISTORICAL_ANALYTICS.md  IMPLEMENTATION_COMPLETE.md  QUICK_START.md  (+9 more)
services/listing-worker/: .env.example  .gitignore  Dockerfile  README.md  check_queue.py  main.py  pyproject.toml  railway.toml  requirements.txt  start_chrome_debug.sh  test_local_mode.py  test_quick.py
services/listing-worker/agents/: __init__.py  base_agent.py  ebay_agent.py  flyp_agent.py  mercari_agent.py  poshmark_agent.py  researcher.py
services/listing-worker/orchestrator/: job_processor.py  state_manager.py
services/listing-worker/utils/: metrics.py  notifications.py  session_loader.py
(+233 files in other folders)
