[project]
name = "listing-worker"
version = "1.0.0"
description = "Autonomous cross-listing worker using browser-use (2026 Best Practices)"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "AI Resell Agent", email = "support@listingsai.com"}
]

dependencies = [
    # Browser automation (2026 state-of-the-art)
    "browser-use>=0.7.7",
    "playwright>=1.40.0",
    
    # Job queue and async processing
    "redis>=5.0.0",
    "rq>=1.16.0",
    "celery[redis]>=5.3.0",
    
    # HTTP client
    "httpx>=0.27.0",
    "requests>=2.31.0",
    
    # Data validation and parsing
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    
    # Environment management
    "python-dotenv>=1.0.0",
    
    # Database
    "supabase>=2.0.0",
    "psycopg2-binary>=2.9.9",
    
    # AI/LLM integration
    "openai>=1.10.0",
    "anthropic>=0.25.0",
    
    # Utilities
    "tenacity>=8.2.3",  # Retry logic
    "structlog>=24.1.0",  # Structured logging
    "python-dateutil>=2.8.2",
    
    # Image processing
    "pillow>=10.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "black>=23.12.0",
    "ruff>=0.1.9",
    "mypy>=1.8.0",
]

[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 100
target-version = ['py311']

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
